@@ -1,3 +1,6 @@
 # PPC G4 on MacOS X 10.1
 TARGETOS = ppc-unknown-macosx10
 HOSTOS = ppc-unknown-macosx10
+
+TARGETCC  = cc
+TARGETCXX = c++
